[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9.5"
aiohttp = "^3.7.4"
pandas = "^1.2.4"
ujson = "^4.0.2"
xmltodict = "^0.12.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
aiofiles = { git = "https://github.com/Tinche/aiofiles.git" }
ffmpeg-python = "^0.2.0"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
